--- a/asset/index.html
+++ b/asset/index.html
@@ -49,6 +49,14 @@
     
 </head>
 <body>
+    <!-- 스킵메뉴 -->
+    <div id="skip">
+        <a rel="bookmark" href="#movie">최신영화소식</a>
+        <a rel="bookmark" href="#event">새로운 이벤트</a>
+        <a rel="bookmark" href="#new">최신영화</a>
+    </div>
+    <!-- //스킵메뉴 -->
+
     <header id="header">
         <div class="container">
             <div class="row">
@@ -856,25 +864,25 @@
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">전체</strong><em>2019.05.28</em></dt>
-                                                <dd>[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</dd>
+                                                <dd><a href="#">[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">전체</strong><em>2019.05.28</em></dt>
-                                                <dd>[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</dd>
+                                                <dd><a href="#">[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">전체</strong><em>2019.05.28</em></dt>
-                                                <dd>[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</dd>
+                                                <dd><a href="#">[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">전체</strong><em>2019.05.28</em></dt>
-                                                <dd>[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</dd>
+                                                <dd><a href="#">[무대인사] 터미네이터6 시즌 발표 및 영상 제작 10주년 기념 라이브 쇼</a></dd>
                                             </dl>
                                         </li>
                                     </ul>
@@ -1368,6 +1376,48 @@
             </div>
         </div>
     </section>
+    <!-- //help -->
+
+    <footer id="footer">
+        <div id="footer_sns">
+            <div class="container">
+                <div class="footer_sns">
+                    <ul>
+                        <li class="icon s1"><a href="#"><span class="ir_pm">트위터</span></a></li>
+                        <li class="icon s1"><a href="#"><span class="ir_pm">페이스북</span></a></li>
+                        <li class="icon s1"><a href="#"><span class="ir_pm">인스타그램</span></a></li>
+                        <li class="icon s1"><a href="#"><span class="ir_pm">구글플레이</span></a></li>
+                        <li class="icon s1"><a href="#"><span class="ir_pm">앱스토어</span></a></li>
+                    </ul>
+                    <div class="tel">
+                        <a href="#">ARS<em>1544-0700</em></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_info">
+            <div class="container">
+                <div class="row">
+                    <div class="footer_info">
+                        <h2><img src="./img/logo_footer.png" alt="megabox"></h2>
+                        <ul>
+                            <li><a href="#">회사소개</a></li>
+                            <li><a href="#">채용정보</a></li>
+                            <li><a href="#">제휴/광고/부대사업 문의</a></li>
+                            <li><a href="#">이용약관</a></li>
+                            <li><a href="#">개인정보처리방침</a></li>
+                            <li><a href="#">고객센터</a></li>
+                            <li><a href="#">윤리경영</a></li>
+                        </ul>
+                        <address>
+                            <p>서울특별시 강남구 도산대로 156, 2층 메가박스중앙(주) (논현동, 중앙엠앤비사옥)<br><span class="bar2">대표자명 김진선</span> 개인정보보호 책임자 경영지원실 실장 박영진<br><span class="bar2">사업자등록번호 211-86-59478</span> 통신판매업신고번호 제 833호</p>
+                            <p>Copyright 2014 by MegaboxJoongAng Inc. All right reserved</p>
+                        </address>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- script -->
@@ -1442,6 +1492,22 @@
             movCont.css("display", "none");
             movCont.eq(index).css("display", "block");
         });
+
+        // 공지사항 탭메뉴
+        var tabMenu = $(".notice");
+
+        // 컨텐츠 내용 숨기기
+        tabMenu.find(".ul > li > ul").hide();
+        tabMenu.find("li.active > ul").show();
+
+        function tabList(e){
+            e.preventDefault(); //#의 기능을 차단
+            var target = $(this);
+            target.next().show().parent("li").addClass("active").siblings("li").removeClass("active").find("ul").hide();
+            // 버튼 클릭하면 ~ul 보여주고 부모의 li 태그에 클래스 추가하고 형제의 li 태그에 클래스 제거하고 제거한 자식의 ul 태그를 숨겨줌
+        }
+
+        tabMenu.find("ul > li > a").click(tabList).focus(tabList);
     </script>
 </body>
 </html>
