--- a/asset/index.html
+++ b/asset/index.html
@@ -1418,11 +1418,21 @@
             </div>
         </div>
     </footer>
+    <!-- //footer -->
+
+    <aside id="blackout" class="overlay">
+        <div id="trailerModal" class="modal">
+            <div class="trailder"></div> <!--youtube 플레이어도 대체되는 부분-->
+        </div>
+        <button id="hideTrailer" class="modal_close"></button>
+    </aside>
+    <!-- //트레일러 -->
 
 
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="./js/movie.js"></script>
     <script>
 
         // 배너 이미지 슬라이드
